CLASSES-2806 add padding around the add gradebook item

--- a/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
@@ -6,6 +6,10 @@
     font-weight:400;
     font-style:normal
 }
+#gradebookSpreadsheet,
+#gradebookGradesToolbar {
+  margin-top: 20px;
+}
 #gradeTableWrapper {
   position: relative;
   overflow: visible;
