--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -219,18 +219,32 @@
             </div>
         </script>
         <script id="studentCellTemplate" type="text/template">
-            <div class="relative gb-student-cell">
+            {if settings.isStudentOrderedByLastName}
+                {var tooltip = lastName + ", " + firstName + " (" + eid + ")"}
+            {else}
+                {var tooltip = firstName + " " + lastName + " (" + eid + ")"}
+            {/if}
+            {var tooltip = tooltip.replace(/"/g, '&quot;')}
+            <div class="relative gb-student-cell" title="${tooltip}">
                 <div class="gb-value">
                     <div class="rowHeader">
                         <a href="javascript:void(0);" class="gb-view-grade-summary" tabindex="-1">
                             {if settings.isStudentOrderedByLastName}
-                                <span class="gb-last-name">${lastName}</span>,
-                                <span class="gb-first-name">${firstName}</span>
-                                (<span class="gb-eid">${eid}</span>)
+                                <div>
+                                    <span class="gb-last-name">${lastName}</span>,
+                                    <span class="gb-first-name">${firstName}</span>
+                                </div>
+                                <div>
+                                    (<span class="gb-eid">${eid}</span>)
+                                </div>
                             {else}
-                                <span class="gb-first-name">${firstName}</span>
-                                <span class="gb-last-name">${lastName}</span>
-                                (<span class="gb-eid">${eid}</span>)
+                                <div>
+                                    <span class="gb-first-name">${firstName}</span>
+                                    <span class="gb-last-name">${lastName}</span>
+                                </div>
+                                <div>
+                                    (<span class="gb-eid">${eid}</span>)
+                                </div>
                             {/if}
                         </a>
                     </div>
