--- a/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
@@ -48,10 +48,18 @@
 #gradeTableWrapper .handsontable tr > *:nth-child(1){
   text-align: left;
 }
+#gradeTableWrapper .handsontable tbody tr > *:nth-child(1) .relative,
+#gradeTableWrapper .handsontable tbody tr > *:nth-child(2) .relative {
+  padding: 2px 8px;
+}
+#gradeTableWrapper .handsontable tbody tr > *:nth-child(1) .relative .gb-value {
+  overflow: hidden;
+}
 #gradeTableWrapper .handsontable tr > *:nth-child(2){
   border-right: 1px solid #BBB;
 }
 #gradeTableWrapper .handsontable thead th {
+  color: #666;
   border-bottom: 1px solid #BBB;
 }
 #gradeTableWrapper .handsontable tbody tr:nth-child(2n) td,
