CLASSES-2820 fix required CSS not adding to Wicket labels and show asterisk on those required fields

--- a/gradebookng/tool/src/webapp/styles/gradebook-shared.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-shared.css
@@ -26,3 +26,8 @@
  .radio input[type="radio"][disabled]+label{
    color: #999;
  }
+
+/* required labels should have a prefix asterisk */
+.control-label.required:before {
+  content: '*';
+}
