CLASSES-2965 Show 'unpublished' in italics and adjust membership table column widths

--- a/site-manage/site-manage-tool/tool/src/webapp/vm/membership/chef_membership.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/membership/chef_membership.vm
@@ -191,7 +191,11 @@
 								</td>
 
 								<td headers="status">
-									$meta.siteStatus
+									#if($site.Published)
+										$meta.siteStatus
+									#else
+										<i>$meta.siteStatus</i>
+									#end
 								</td>
 							</tr>
 						#end
