--- a/site-manage/site-manage-tool/tool/src/webapp/vm/membership/chef_membership.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/membership/chef_membership.vm
@@ -127,24 +127,21 @@
 							<input title="$tlang.getString("mb.selectalltitle")" type="checkbox" name="selunselall" id="selunselallid"/>
 						</th>
 						<th id="worksite" class="attach">
-							<a href="#toolLink("$action" "doToggle_sort")" title ="$tlang.getString('list.sortbytitle')"> 
-								$tlang.getString("gen.worksite")
-								#if ($currentSortAsc) 
-									<img src = "#imageLink("sakai/sortascending.gif")" border="0" title ="$tlang.getString('list.stasc')" alt ="$tlang.getString('list.stasc')" /> 
-								#else 
-									<img src = "#imageLink("sakai/sortdescending.gif")" border="0" title ="$tlang.getString('list.stdesc')" alt ="$tlang.getString('list.stdesc')" /> 
-								#end	
-							</a>
+							$tlang.getString("gen.worksite")
 						</th>
-
-						## SAK-29138
-						<th id="sections">$tlang.getString("mb.sections")</th>
 
 						<th id="instructor">$tlang.getString("gen.instructor")</th>
 
 						<th id="description">$tlang.getString("gen.description")</th>
 
 						<th id="term">$tlang.getString("gen.term")</th>
+
+						<th headers="created_date">
+							$tlang.getString("gen.createddate")
+							<img src = "#imageLink("sakai/sortdescending.gif")" border="0" title ="$tlang.getString('list.stdesc')" alt ="$tlang.getString('list.stdesc')" /> 
+						</th>
+
+
 						<th id="status">$tlang.getString("gen.status")</th>
 					</tr>
 					<tbody>
@@ -171,10 +168,6 @@
 									#end
 								</td>
 
-								<td headers="sections">
-									$siteGroupsMap.get( $site.getId() )
-								</td>
-
 								<td headers="instructor">
 									$meta.instructorEids
 								</td>
@@ -188,6 +181,10 @@
 
 								<td headers="term">
 									$meta.term
+								</td>
+
+								<td headers="created_date">
+									$meta.createdDate
 								</td>
 
 								<td headers="status">
