CLASSES-3014 remove 500 character limit from gradebookng comments

--- a/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
@@ -419,6 +419,10 @@
   list-style: none;
   padding-left: 0;
 }
+.gb-metadata .gb-metadata-notifications .gb-metadata-comment-notification blockquote {
+  max-height: 200px;
+  overflow: auto;
+}
 #gradebookGradesToolbar {
   border-top: 1px solid #F6f6f6;
 }
