replace pasystem with stealth

--- a/stealth/stealth-tool/tool/src/webapp/stylesheets/stealth.css
+++ b/stealth/stealth-tool/tool/src/webapp/stylesheets/stealth.css
@@ -4,7 +4,7 @@
   src:url('../fonts/stealth-icons.eot?#iefix-wa2nby') format('embedded-opentype'),
     url('../fonts/stealth-icons.woff?-wa2nby') format('woff'),
     url('../fonts/stealth-icons.ttf?-wa2nby') format('truetype'),
-    url('../fonts/stealth-icons.svg?-wa2nby#pasystem-icons') format('svg');
+    url('../fonts/stealth-icons.svg?-wa2nby#stealth-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
